helm/apps/homepage/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
  namespace: homepage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homepage
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: homepage
    spec:
      containers:
        - name: homepage
          image: ghcr.io/gethomepage/homepage:latest
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: config
              mountPath: /app/config
            - name: images
              mountPath: /app/public/images
            - name: icons
              mountPath: /app/public/icons
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: homepage-config
        - name: images
          nfs:
            server: 192.168.50.201
            path: /volume1/networkShare/srv/homepage/config
        - name: icons
          nfs:
            server: 192.168.50.201
            path: /volume1/networkShare/srv/homepage/icons
