helm/apps/homepage/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: homepage
spec:
  type: ClusterIP
  selector:
    app: homepage
  ports:
    - port: 3000
      targetPort: 3000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage
  namespace: homepage
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`home.kds-dev.com`)
      kind: Rule
      services:
        - name: homepage
          port: 3000
  tls: {}
